--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Calum Gould - Software Developer"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Calum Gould</title>
